# pytest-httpchain

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CURSOR_INTEGRATION.md  ENHANCEMENT_PROPOSALS.md  KWARGS_FUNCTIONALITY.md  MCP_SERVER_README.md  MCP_SERVER_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  STAGE_SAVE_FUNCTIONS_IMPLEMENTATION.md  TEST_OPTIMIZATION_SUMMARY.md  USAGE.md  coverage.xml  makefile  mcp-config.example.json  mcp_config.json  mcp_server.py  mkdocs.yml  pyproject.toml  settings.py  test_module.py  tox.toml
.cursor/rules/: development-workflow.mdc  json-test-files.mdc  project-structure.mdc  pytest-guidelines.mdc  python-code-style.mdc
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yml  test.yml  tombstones.yml
docs/: diagnostics.md  getting-started.md  index.md  troubleshooting.md
docs/advanced/: context-layering.md  parallel.md  parametrization.md  ref-merging.md
docs/schema/: scenario.schema.json
docs/superpowers/plans/: 2026-07-13-workspace-consolidation.md
docs/superpowers/specs/: 2026-07-13-workspace-consolidation-design.md
docs/usage/: requests.md  responses.md  scenarios.md  substitutions.md
pytest_http/: __main__.py  mcp_server.py  models.py  pytest_plugin.py  settings.py  types.py  user_function.py
sandbox/: models.py  pytest_plugin.py
scripts/: generate_schema.py
src/pytest_http/: plugin.py  plugin2.py  tester.py  utils.py
src/pytest_httpchain/: __init__.py  carrier.py  carrier_factory.py  cli.py  constants.py  context_manager.py  dataflow.py  errors.py  exceptions.py  factory.py  fixture_manager.py  har_writer.py  parallel.py  plugin.py  report_formatter.py  request.py  response.py  schema.py  scoping.py  skill.md  stage_executor.py  tester.py  userfunc.py  utils.py  validation.py  warnings.py
src/pytest_httpchain/core/: __init__.py  collector.py  data_context.py  executor.py  session.py  session_manager.py
src/pytest_httpchain/handlers/: __init__.py  request.py  response.py  verification.py
src/pytest_httpchain/jsonref/: CLAUDE.md  __init__.py  exceptions.py  loader.py
src/pytest_httpchain/models/: CLAUDE.md  __init__.py  entities.py  types.py
src/pytest_httpchain/templates/: CLAUDE.md  __init__.py  exceptions.py  expressions.py  substitution.py
tests/: conftest.py  not_a_test.http.json  not_a_test.json  ref_stage.json  test_configuration.py  test_fixture.sandbox.json  test_http_integrated.py  test_http_requests.py  test_http_verification.py  test_integration.py  test_kwargs_functionality.py  test_kwargs_integration.py  test_kwargs_substitution.py  test_mark_skip.http.json  test_mark_skipif.sandbox.json  test_mark_xfail.http.json  test_mcp_server.py  test_module.py  test_plugin_integration.py  test_plugin_kwargs_functionality.py  test_ref.http.json  test_refactored_usage.py  test_regular.py  test_settings.py  test_substitution.http.json  test_variable_substitution.py  test_variable_substitution_optimized.py  test_verify_functions_integration.py  test_verify_functions_runtime.py  test_verify_helpers.py
tests/examples/: conftest.py  conftest_functions.py  not_a_test.http.json  ref_stage.json  test_basic.http.json  test_fixtures.http.json  test_functions.http.json  test_functions_example.http.json  test_functions_with_kwargs.http.json  test_helpers.py  test_http_example.http.json  test_invalid.http.json  test_json_verification.http.json  test_kwargs_comprehensive.http.json  test_kwargs_helpers.py  test_kwargs_with_variables.http.json  test_mark_skipif.http.json  test_mark_xfail.http.json  test_method_json.http.json  test_method_json_defaults.http.json  test_multistage.http.json  test_ref.http.json  test_regular_python.py  test_skip.http.json  test_stage_substitution.http.json  test_substitution.http.json  test_valid.http.json  test_verify_example.http.json  test_verify_functions.http.json  test_verify_functions_with_kwargs.http.json  test_verify_helpers.py
tests/integration/: conftest.py  test_altec.py  test_auth.py  test_body_types.py  test_collection_validation.py  test_context_logging.py  test_dummy.py  test_errors.py  test_eval_substitution.py  test_fixtures.py  test_full.py  test_har_output.py  test_headers_verification.py  test_ini_namespacing.py  test_json_type_preservation.py  test_lazy_init.py  test_mark.py  test_marks.py  test_misc.py  test_mixed_template.py  test_ordering.py  test_parallel.py  test_parametrize.py  test_primer.py  test_redirects.py  test_ref_merge_bug.py  test_ref_var_merge.py  test_regex.py  test_response_metadata.py  test_save.py  test_scenario_relative_paths.py  test_schema_validation.py  test_stage_marks.py  test_stage_vars.py  test_templates.py  test_timeout_execution.py  test_type_preservation.py  test_user_reported_case.py  test_verify.py  test_xdist.py  (+1 more)
tests/integration/examples/: auth.py  conftest.py  fixtures.py  save.py  stage_ref.json  test_aws_credentials.http.json  test_aws_profile.http.json  test_full.http.json  test_mark_xfail.http.json  (+2 more)
tests/models/: test_integration.py  test_models_consolidated.py  test_scenario.py  test_stage.py  test_structure.py  test_test_definition.py  test_verify.py  test_verify_functions.py
tests/plugin_components/: test_json_test_function.py  test_name_pattern.py
tests/unit/: test_aws_auth.py  test_carrier.py  test_cli.py  test_combined_validator.py  test_dataflow.py  test_har_writer.py  test_initial_vars.py  test_json_test_function.py  test_models.py  test_plugin.py  test_report_formatter.py  test_scoping.py  test_ssl_models.py  test_substitution.py  test_timeout.py  test_utils.py  test_validation.py  test_var_overwriting.py
tombstones/pytest-httpchain-core/: README.md  pyproject.toml
tombstones/pytest-httpchain-jsonref/: README.md  pyproject.toml
tombstones/pytest-httpchain-mcp/: README.md  pyproject.toml
tombstones/pytest-httpchain-models/: README.md  pyproject.toml
tombstones/pytest-httpchain-templates/: README.md  pyproject.toml
tombstones/pytest-httpchain-templates/src/pytest_httpchain_templates/: __init__.py
tombstones/pytest-httpchain-userfunc/: README.md  pyproject.toml
(+283 files in other folders)
