[project]
name = "pytest-httpchain"
version = "0.1.0"
description = "pytest plugin for HTTP testing using JSON files"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [{ name = "Alexander Eresov", email = "aeresov@gmail.com" }]
dependencies = [
    "pytest-httpchain-engine",
    "pytest-order>=1.3.0",
    "rich>=13.7.0",
]
keywords = ["testing", "pytest", "requests"]
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
mcp = ["pytest-httpchain-mcp"]

[dependency-groups]
dev = [
    "http-server-mock>=1.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
    "pytest-xdist>=3.8.0",
    "responses>=0.25.7",
    "ruff>=0.12.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pytest-httpchain-engine = { workspace = true }
pytest-httpchain-mcp = { workspace = true }

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project.entry-points.pytest11]
pytest_httpchain = "pytest_httpchain.plugin"

[tool.ruff]
line-length = 180
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["tests", "utils"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
norecursedirs = ["examples"]
pytester_example_dir = "tests/integration/examples"
addopts = "--log-disable=werkzeug"

[tool.pyright]
exclude = [".tox/"]
ignore = [".venv/"]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportExplicitAny = false
typeCheckingMode = "off"
pythonPlatform = "Linux"
