[project]
name = "pytest-httpchain"
version = "0.9.0"
description = "pytest plugin for HTTP testing using JSON files"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alexander Eresov", email = "aeresov@gmail.com" }]
dependencies = [
    "deepmerge>=2.0",
    "graphql-core>=3.0.0",
    "httpx[http2]>=0.27.0",
    "jmespath>=1.0.0",
    "jsonschema>=4.0.0",
    "pydantic>=2.11.7",
    "pyrate-limiter>=4.0.0",
    "pytest>=8.4",
    "pytest-order>=1.3.0",
    "simpleeval>=1.0.3",
    "typer>=0.16.0",
]
keywords = ["testing", "pytest", "httpx", "http", "api", "integration-testing"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Repository = "https://github.com/aeresov/pytest-httpchain"
Documentation = "https://aeresov.github.io/pytest-httpchain/"
Changelog = "https://github.com/aeresov/pytest-httpchain/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "flask-httpauth>=4.8.0",
    "http-server-mock>=1.7",
    "import-linter>=2.0",
    "ruff>=0.12.1",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.0",
    "pytest-datadir>=1.7.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["src/pytest_httpchain/**/CLAUDE.md"]

[project.scripts]
pytest-httpchain = "pytest_httpchain.cli:app"

[project.entry-points.pytest11]
pytest_httpchain = "pytest_httpchain.plugin"

[tool.ruff]
line-length = 180
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["tests", "utils"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.terminal]
error-on-warning = true

# Test suites (especially the models package) deliberately construct models with
# invalid types to assert ValidationError, and access attributes on unions/mocks
# the checker can't narrow. Relax those specific rules for test code only; src/
# stays strict and uses pinpoint `# ty: ignore[...]` comments instead.
[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unknown-argument = "ignore"
unresolved-attribute = "ignore"
not-subscriptable = "ignore"
missing-argument = "ignore"

[tool.pytest]
minversion = "9.0"
log_cli = true
log_cli_level = "INFO"
norecursedirs = ["examples"]
pytester_example_dir = "tests/integration/examples"
addopts = ["--log-disable=werkzeug", "--import-mode=importlib"]
pythonpath = [
    ".",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.importlinter]
root_package = "pytest_httpchain"

[[tool.importlinter.contracts]]
name = "domain subpackages do not import plugin modules"
type = "forbidden"
source_modules = [
    "pytest_httpchain.models",
    "pytest_httpchain.templates",
    "pytest_httpchain.jsonref",
    "pytest_httpchain.userfunc",
]
forbidden_modules = [
    "pytest_httpchain.plugin",
    "pytest_httpchain.carrier",
    "pytest_httpchain.cli",
    "pytest_httpchain.validation",
    "pytest_httpchain.dataflow",
    "pytest_httpchain.schema",
    "pytest_httpchain.utils",
    "pytest_httpchain.har_writer",
    "pytest_httpchain.report_formatter",
    "pytest_httpchain.constants",
]

[[tool.importlinter.contracts]]
name = "lower domain layers do not import models"
type = "forbidden"
source_modules = [
    "pytest_httpchain.templates",
    "pytest_httpchain.jsonref",
    "pytest_httpchain.userfunc",
]
forbidden_modules = ["pytest_httpchain.models"]

[[tool.importlinter.contracts]]
name = "models does not import jsonref"
type = "forbidden"
source_modules = ["pytest_httpchain.models"]
forbidden_modules = ["pytest_httpchain.jsonref"]

[[tool.importlinter.contracts]]
name = "templates, jsonref, and userfunc are independent"
type = "independence"
modules = [
    "pytest_httpchain.templates",
    "pytest_httpchain.jsonref",
    "pytest_httpchain.userfunc",
]
