[project]
name = "pytest-httpchain-templates"
version = "0.9.0"
description = "Deprecated: consolidated into pytest-httpchain>=0.9. This placeholder prevents name squatting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest-httpchain>=0.9"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Framework :: Pytest",
]

[project.urls]
Repository = "https://github.com/aeresov/pytest-httpchain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_httpchain_templates"]
